[tool.poetry]
name = "pi-light"
version = "0.1.0"
description = ""
authors = ["obviousrebel <joshalex359@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
